--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,11 @@
 {% endblock %}
   </head>
   <body class="{{ global_classes|join(' ') }}">
+    <div id="user-panel">
+      <span class="cl-label">Current User :</span>
+      <span class="cl-value">{{ _global.get('user').username }}</span>
+      <a class="cp-button cl-decent" href="{{ url_for('logout') }}">Logout</a>
+    </div>
     <div id="header">
 <!-- START: header -->
 {% block header %}{% endblock %}
