--- a/templates/product-update-form.html
+++ b/templates/product-update-form.html
@@ -25,8 +25,9 @@
       <label>
         <span>Category</span>
         <select name="id_category">
-          <option{{ (data.category_name == 'Phone')? ' selected' : '' }}>Phone</option>
-          <option{{ (data.category_name == 'Tablet')? ' selected' : '' }}>Tablet</option>
+        {% for category in categoryList %}
+          <option value="{{ category.id }}"{{ (category.id == data.id_category)? ' selected' : '' }}>{{ category.name }}</option>
+        {% endfor %}
         </select>
       </label>
     </div>
