product-update-form.html post to route product-update

--- a/templates/product-update-form.html
+++ b/templates/product-update-form.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-  <form class="cp-form" id="product-form" action="" method="post">
+  <form class="cp-form" id="product-form" action="{{ url_for('product-update', { id: data.id }) }}" method="post">
     <div class="cp-wrapper">
       <label>
         <span>Name</span>
