add category-update-form and category-update action

--- a/templates/category-view.html
+++ b/templates/category-view.html
@@ -25,8 +25,8 @@
   <p>Product not found!!!</p>
   {%~ else %}
   <div class="cp-actions-panel">
-    <a class="cp-button cl-decent" href="" >Update Product</a>
-    <a class="cp-button cl-warn" href="" >Delete Product</a>
+    <a class="cp-button cl-decent" href="{{ url_for('category-update-form', {id: data.id}) }}" >Update Category</a>
+    <a class="cp-button cl-warn" href="" >Delete Category</a>
     <span class="cp-space"></span>
     <a class="cp-button" href="{{ url_for('category-list') }}" >&lt; Back</a>
   </div>
