Use more material icons.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,8 +43,15 @@ body.ly-wide #content {
 }
 
 #user-panel {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-items: center;
   padding: 8px;
-  text-align: right;
+}
+
+#user-panel>:not(:last-child) {
+  margin-right: 8px;
 }
 
 #user-panel .cl-label {
@@ -198,7 +205,10 @@ table.cp-list>thead {
 /* button */
 button,
 .cp-button {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
   box-sizing: border-box;
   padding: 8px;
   border: none;
