--- a/templates/category/form.html
+++ b/templates/category/form.html
@@ -9,10 +9,6 @@
         <input type="text" name="name" value="{{ data.name }}" />
       </label>
     </div>
-    <div class="cp-actions-panel">
-      <button class="cl-primary" type="submit">Save</button>
-      <span class="cp-space"></span>
-      <a class="cp-button" href="{{ (data.id is empty)? url_for(data_name ~ '-list') : url_for(data_name ~ '-view', {id: data.id}) }}">Cancel</a>
-    </div>
+    {%~ include 'form-actions-component.html' %}
   </form>
 {% endblock %}
