--- a/templates/login/form.html
+++ b/templates/login/form.html
@@ -27,7 +27,10 @@
     </div>
     <div class="cp-actions-panel">
       <span class="cp-space"></span>
-      <button class="cl-primary" type="submit">Login</button>
+      <button class="cl-primary" type="submit">
+        <i class="material-icons">launch</i>
+        <span>Login</span>
+      </button>
       <span class="cp-space"></span>
     </div>
     </form>
