--- a/templates/list-layout.html
+++ b/templates/list-layout.html
@@ -22,7 +22,10 @@
 {% block content %}
   {%~ include 'flash-message-component.html' %}
   <div class="cp-actions-panel">
-    <a class="cp-button cl-primary" href="{{ url_for(data_name ~ '-add-form') }}" >Add {{ data_name|capitalize }}</a>
+    <a class="cp-button cl-primary" href="{{ url_for(data_name ~ '-add-form') }}" >
+      <i class="material-icons">add</i>
+      <span>Add {{ data_name|capitalize }}</span>
+    </a>
   </div>
 <!--  START: list content -->
   {%~ block list_content %}{% endblock %}
