--- a/templates/view-layout.html
+++ b/templates/view-layout.html
@@ -16,10 +16,19 @@
 {% block content %}
   {%~ include 'flash-message-component.html' %}
   <div class="cp-actions-panel">
-    <a class="cp-button cl-decent" href="{{ url_for(data_name ~  '-update-form', {id: data.id}) }}" >Update {{ data_name|capitalize }}</a>
-    <a class="cp-button cl-warn" href="{{ url_for(data_name ~  '-delete', {id: data.id}) }}" >Delete {{ data_name|capitalize }}</a>
+    <a class="cp-button cl-decent" href="{{ url_for(data_name ~  '-update-form', {id: data.id}) }}" >
+      <i class="material-icons">edit</i>
+      <span>Update {{ data_name|capitalize }}</span>
+    </a>
+    <a class="cp-button cl-warn" href="{{ url_for(data_name ~  '-delete', {id: data.id}) }}" >
+      <i class="material-icons">delete_forever</i>
+      <span>Delete {{ data_name|capitalize }}</span>
+    </a>
     <span class="cp-space"></span>
-    <a class="cp-button" href="{{ url_for(data_name ~  '-list') }}" >&lt; Back</a>
+    <a class="cp-button" href="{{ url_for(data_name ~  '-list') }}" >
+      <i class="material-icons">arrow_back</i>
+      <span>Back</span>
+    </a>
   </div>
 <!-- START: view content -->
   {%~ block view_content %}{% endblock %}
